--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,17 @@
-body {
+#root {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: warp;
+  flex-direction: column;
+  min-width: 100%;
+  color: #e8e8e8;
 }
 
 code {
