--- a/src/App.scss
+++ b/src/App.scss
@@ -14,6 +14,15 @@
   color: #e8e8e8;
 }
 
+main{
+  width: 100%;
+  display: flex;
+  flex-wrap:warp;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
