--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -5,6 +5,7 @@ footer {
   min-width: 100%;
   background-color: $footer_bg;
   position: fixed;
+  // vertical-align: bottom;
   bottom: 0;
   border-top: $footer_border solid;
   h3{
