--- a/src/components/results/results.scss
+++ b/src/components/results/results.scss
@@ -18,6 +18,5 @@ $result_border: #f05454;
   justify-content: center;
   border: solid #30475e;
   border-radius: 4px;
-  // background-color: $result_bg;
-
+  color: rgb(238, 3, 3);
 }
