--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,7 @@
 #root {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
+    "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   display: flex;
@@ -15,16 +14,40 @@
   min-height: 100%;
 }
 
-main{
+main {
   width: 100%;
   display: flex;
-  flex-wrap:warp;
+  flex-wrap: warp;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  position: relative;
+  ul {
+    position: absolute;
+    left: 0;
+    top: -30px;
+    list-style-type: none;
+    padding: 0px;
+    // height: 100%;
+    margin: 10px;
+    border: solid 2px #222831;
+    border-radius: 6px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    min-width: 24%;
+    // align-items: center;
+    h3 {
+      margin-top: 0;
+      margin-bottom: 5px;
+      color: #222831;
+      text-align: center;
+      text-decoration: underline;
+      font-size: 20px;
+    }
+  }
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
