--- a/src/components/form/form.scss
+++ b/src/components/form/form.scss
@@ -19,6 +19,8 @@ form{
     input{
       width: 100%;
       height: 30px;
+      border: solid 2px #222831;
+    border-radius: 6px;
     }
     width: 100%;
     margin: 30px;
@@ -45,9 +47,11 @@ form{
     background-color: #30475e;
     color: $result_border;
   }
-}
-
-#test{
-  color:red impo;
-  background-color: red;
+  textarea{
+    margin-top: 10px;
+    width: 60%;
+    height: 140px;
+    border: solid 2px #222831;
+    border-radius: 6px;
+  }
 }
