--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -6,6 +6,7 @@ header {
   min-width: 100%;
   margin-bottom: 30px;
   border-bottom: solid $header_border;
+  height: 130px;
   h1 {
     text-align: center;
     font-size: 50px;
