--- a/src/components/history/history.scss
+++ b/src/components/history/history.scss
@@ -1,3 +1,32 @@
 li{
-  color:red;
+  color:#f05454;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin: 10px 0px;
+  
+  #spanMethod{
+    background-color: #30475e;
+    border: solid black 2px;
+    border-left: none;
+    // border-radius: 6px;
+    // border-top-left-radius: 0;
+    // border-bottom-left-radius: 0;
+    width: 20%;
+    margin: 0;
+    text-align: center;
+    cursor: pointer;
+    font-weight: bold;
+  }
+  #spanURL{
+    background-color: #f05454;
+    border: solid black 2px;
+    border-left: none;
+    border-right: none;
+    width: 80%;
+    text-align: center;
+    color: #30475e;
+    font-weight: bold;
+    cursor: pointer;
+  }
 }
