--- a/src/index.scss
+++ b/src/index.scss
@@ -9,6 +9,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #e8e8e8;
+  h2{
+    color: #222831;
+  }
 }
 
 code {
